# OpticalMagneticNavigation

./: .gitignore  OpticalMagneticNavigation.md
results/: 60.txt  A_test2.csv  Aurora_60.csv  Aurora_Collected_data_Static111.csv  Aurora_Collected_data_Static_10.csv  Aurora_Collected_data_Static_15.csv  Aurora_Collected_data_Static_29.csv  Aurora_Collected_data_Static_30.csv  Aurora_Collected_data_Static_32.csv  Aurora_Collected_data_Static_test27.csv  Calibrate_result_Static_30.txt  Calibrate_result_Static_32.txt  Calibrate_result_Static_test.txt  Calibrate_result_Staticabc.txt  NDI_test2.csv  Vega_60.csv  Vega_Collected_data_Static_10.csv  Vega_Collected_data_Static_15.csv  Vega_Collected_data_Static_29.csv  Vega_Collected_data_Static_30.csv  Vega_Collected_data_Static_32.csv  Vega_Collected_data_Static_test27.csv  Vega_Collected_data_Staticabc.csv
results/Calibrate/: 说明.txt
results/tmp12(8700339)/: Aurora.csv  Aurora_2EMsensor.txt  CalibrationResult.txt  EM_2Marker2.txt  EMsensor_2Aurora.txt  Magnetic_Data_1_20260128_095921.csv  Magnetic_Data_1_20260128_100453.csv  Magnetic_Data_1_20260128_105354.csv  Magnetic_Data_2_20260128_100926.csv  Magnetic_Data_3_20260128_101538.csv  Magnetic_Data_4_20260128_101910.csv  Magnetic_Data_5_20260128_102333.csv  Marker1_2EMsensor.txt  Marker1_2Marker2.txt  Marker1_2Vega.txt  Marker2_2Marker1.txt  Marker2_2Vega.txt  Optical_Data_1_20260128_095921.csv  Optical_Data_1_20260128_100453.csv  Optical_Data_1_20260128_105354.csv  Optical_Data_2_20260128_100926.csv  Optical_Data_3_20260128_101538.csv  Optical_Data_4_20260128_101910.csv  Optical_Data_5_20260128_102333.csv  (+5 more)
src/: CMakeLists.txt
src/Qt_Interface/: CMakeLists.txt
src/Qt_Interface/include/: CalibrationDialog.h  DeviceReader.h  DisplayWidget.h  LoadCaptureUS.h  NDIWorker.h  TrackingRecordingDialog.h  WriteCaptureUS.h  mainwindow.h  ui_CalibrationDialog.h  ui_display.h  ui_mainwindow.h
src/Qt_Interface/src/: CalibrationDialog.cpp  CalibrationDialog.ui  DeviceReader.cpp  DisplayWidget.cpp  LoadCaptureUS.cpp  NDIWorker.cpp  TrackingRecordingDialog.cpp  TrackingRecordingDialog.ui  WriteCaptureUS.cpp  display.ui  main.cpp  mainwindow.cpp  mainwindow.ui  ui_mainwindow.h
src/Sample/: CMakeLists.txt
src/Sample/include/: OMCalibrate.h
src/Sample/src/: OMCalibrate.cpp  ToolRegi.cpp  main_combined_devices.cpp  system_calibrate.cpp  test_ToolRegi.cpp  test_icp.cpp
tools/: 01081.rom  080061.rom  20241023.rom  260125.rom  Otool1.rom  Otool2.rom  Otool3.rom  ToolScribing.stl  ToolScribing2.stl  工具说明.txt
(+36 files in other folders)
